--- a/Analysis/templates/stock_data.html
+++ b/Analysis/templates/stock_data.html
@@ -1,31 +1,28 @@
-<!-- templates/stocks/stock_data.html -->
+<!-- templates/stock_data.html -->
+{% extends 'base.html' %}
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Datos de un ticker</title>
-</head>
-<body>
-    <h1>{{ nombre_ticker }}</h1>
-    <table>
+{% block content %}
+
+<h1>{{ nombre_ticker }}</h1>
+<table>
+    <tr>
+        <th>Date</th>
+        <th>Open</th>
+        <th>High</th>
+        <th>Low</th>
+        <th>Close</th>
+        <th>Volume</th>
+    </tr>
+    {% for data in ticker_data %}
         <tr>
-            <th>Date</th>
-            <th>Open</th>
-            <th>High</th>
-            <th>Low</th>
-            <th>Close</th>
-            <th>Volume</th>
+            <td>{{ data.Date }}</td>
+            <td>{{ data.Open }}</td>
+            <td>{{ data.High }}</td>
+            <td>{{ data.Low }}</td>
+            <td>{{ data.Close }}</td>
+            <td>{{ data.Volume }}</td>
         </tr>
-        {% for data in ticker_data %}
-            <tr>
-                <td>{{ data.Date }}</td>
-                <td>{{ data.Open }}</td>
-                <td>{{ data.High }}</td>
-                <td>{{ data.Low }}</td>
-                <td>{{ data.Close }}</td>
-                <td>{{ data.Volume }}</td>
-            </tr>
-        {% endfor %}
-    </table>
-</body>
-</html>
+    {% endfor %}
+</table>
+
+{% endblock %}
