--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -5,37 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAT: Financial Analysis Tool</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
-
-    <nav>
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-
-            <li>
-                <a href="/mapa">Mapa stocks</a>
-            </li>
-
-            {% if user.is_authenticated %}
-            <!-- Sólo lo muestro si el usuario está registrado -->
-            <li>
-                <a href="/logout">Logout</a>
-            </li>
-            {% else %}
-            <!-- Sólo lo muestro si el usuario está sin registrar -->
-            <li>
-                <a href="/login">Login</a>
-            </li>
-            <li>
-                <a href="/signup">Signup</a>
-            </li>
-            {% endif %}
-            
-
-        </ul>
-    </nav>
+<body>       
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <!-- <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+              <img src="/static/Logo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+              FAT: Financial Analysis Tool
+            </a>
+        </div> -->
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/mapa">Mapa stocks</a>
+                </li>
+    
+                {% if user.is_authenticated %}
+                <!-- Sólo lo muestro si el usuario está registrado -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Logout</a>
+                </li>
+                {% else %}
+                <!-- Sólo lo muestro si el usuario está sin registrar -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/login">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/signup">Signup</a>
+                </li>
+                {% endif %}
+            </ul>
+            </div>
+        </div>
+        </nav>
+    
     {% block content %}
     {% endblock %}
 
