--- a/Analysis/templates/signup.html
+++ b/Analysis/templates/signup.html
@@ -3,20 +3,48 @@
 
 {% block content %}
 
-<h1>signup</h1>
-  {{ error }}
-  <!-- Con POST para no mostrar en URL, ojo-->
-  <form action="/signup/" method="POST">
-      <!-- Código Jinja para evitar el warning de Django.
-      Esto asegura que el formulario es creado por mi servidor y no por un atacante, porque se genera un 
-      token de identficación única (no se puede clonar 
-      mi página y re-enviar un formulario porque el token
-      es diferente) -->
-      {% csrf_token %}
 
-      {{ form.as_p }}
+<main class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3 mt-5"> 
+      <!-- Con POST para no mostrar en URL, ojo-->
+      <form action="/signup/" method="POST" class="card card-body">
+        <h1 class="text-center">Registro</h1>
+        <p style="color: red;">{{ error }}</p>
+      
+        <!-- Código Jinja para evitar el warning de Django.
+            Esto asegura que el formulario es creado por mi servidor y no por un atacante, porque se genera un 
+            token de identficación única (no se puede clonar 
+            mi página y re-enviar un formulario porque el token
+            es diferente) -->
+        {% csrf_token %}
+        
+        <!-- Ya no uso el form pasado desde el método, sino
+        que para dar estilos uso las clases como se ve a continuación. 
+        En realidad, lo importante son los nombres e ids de los input, porque son los mismos que traía el 'form' -->
+        <!-- {{ form }} -->
+          
+        <div class="mb-3"> 
+          <label for="username">Usuario</label>
+          <input type="text" name="username" id="username" class="form-control" placeholder="Nombre de usuario">
+        </div>
 
-      <button>Signup</button>
-  </form>
+        <div class="mb-3"> 
+          <label for="password1">Password</label>
+          <input type="password" name="password1" id="password1" class="form-control" placeholder="Pass">
+        </div>
+
+        <div class="mb-3"> 
+          <label for="password2">Confirmar password</label>
+          <input type="password" name="password2" id="password2" class="form-control" placeholder="Pass">
+        </div>
+
+        <button class="btn btn-dark">Registro</button>
+      </form>
+    </div>
+
+  </div>
+
+</main>
 
 {% endblock %}
