--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAT: Financial Analysis Tool</title>
+    <!-- Para los CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- JavaScript Bundle con Popper, para desplegable de Navbar, p. ej. -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 </head>
 <body>       
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-        <!-- <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-              <img src="/static/Logo.png" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
-              FAT: Financial Analysis Tool
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="/static/Logo.png" alt="" width="50" height="50" class="d-inline-block align-text-center">
+                Financial Analysis Tool
             </a>
-        </div> -->
-        <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +40,7 @@
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/signup">Signup</a>
+                    <a class="nav-link" href="/signup">Registro</a>
                 </li>
                 {% endif %}
             </ul>
