--- a/Analysis/templates/mapa_stocks.html
+++ b/Analysis/templates/mapa_stocks.html
@@ -2,35 +2,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    
+
 <h1>Mapa stocks</h1>
 
-<table border="1">
-    <thead>
-        <tr>
-            <th>Ticker</th>
-            <th>Fecha</th>
-            <th>Apertura</th>
-            <th>Mayor</th>
-            <th>Menor</th>
-            <th>Cierre</th>
-            <th>Volumen</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for ticker, entry in datosFinStocks.items %}
+<div class="container">
+    <table class="table table-striped table-hover table-bordered table-sm">
+        <thead>
+            <tr>
+                <th scope="col">Ticker</th>
+                <th scope="col">Fecha</th>
+                <th scope="col">Apertura</th>
+                <th scope="col">Mayor</th>
+                <th scope="col">Menor</th>
+                <th scope="col">Cierre</th>
+                <th scope="col">Volumen</th>
+            </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            {% for ticker, entry in datosFinStocks.items %}
             <tr>
                 <td><a href="/ibex35/{{ ticker }}/chart">{{ ticker }}</a></td>
                 <td>{{ entry.0|date:"d/m/Y H:i" }}</td>
                 <td>{{ entry.1|floatformat:3 }}</td>
-                    <td>{{ entry.2|floatformat:3 }}</td>
-                    <td>{{ entry.3|floatformat:3 }}</td>
-                    <td>{{ entry.4|floatformat:3 }}</td>
-                    <td>{{ entry.5 }}</td>
+                <td>{{ entry.2|floatformat:3 }}</td>
+                <td>{{ entry.3|floatformat:3 }}</td>
+                <td>{{ entry.4|floatformat:3 }}</td>
+                <td>{{ entry.5 }}</td>
                 <!-- Add more columns as needed -->
             </tr>
-        {% endfor %}
-    </tbody>
-</table>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 
 {% endblock %}
