--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -1,5 +1,8 @@
 <!-- templates/base.html -->
+
 <!DOCTYPE html>
+{% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -17,7 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="/static/Logo.png" alt="" width="50" height="50" class="d-inline-block align-text-center">
+                <img src="{% static 'Logo.png'%}" alt="" width="50" height="50" class="d-inline-block align-text-center">
                 Financial Analysis Tool
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
