--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -20,8 +20,9 @@
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
-                <img src="{% static 'img/Logo.png'%}" alt="" width="50" height="50" class="d-inline-block align-text-center">
+                <!-- <img src="../../static/Logo.png" alt="" width="50" height="50" class="d-inline-block align-text-center"> -->
                 Financial Analysis Tool
+                <img src="{% static 'Logo.png' %}" alt="" width="50" height="50" class="d-inline-block align-text-center">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
