--- a/Analysis/templates/home.html
+++ b/Analysis/templates/home.html
@@ -20,7 +20,8 @@
 <main class="container py-5">
   <section class="card card-body text-center custom-background">
     <h1 class="display-3">FAT: Financial Analysis Tool</h1>
-    <img src="{% static 'img/Portada.jpg' %}" alt="" width="500" class="mx-auto">
+    <!-- <img src="../../static/Portada.jpg" alt="" width="500" class="mx-auto"> -->
+    <img src="{% static 'Portada.jpg' %}" alt="" width="500" class="mx-auto">
 
     <div class="container">
       {% if user.is_authenticated %}
