--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -33,8 +33,14 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/mapa">Mapa stocks</a>
+                    <a class="nav-link" href="/mapa/ibex35">IBEX35</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/mapa/dj30">DJ30</a>
+                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/mapa">Mapa stocks</a>
+                </li> -->
     
                 {% if user.is_authenticated %}
                 <!-- Sólo lo muestro si el usuario está registrado -->
