--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -9,12 +9,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FAT: Financial Analysis Tool</title>
+    
     <!-- Para los CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <!-- JavaScript Bundle con Popper, para desplegable de Navbar, p. ej. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+
+    <!-- JAvaScript para hacer columnas ordenables en tablas -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <script type="text/javascript" charset="utf8" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.js"></script>
+
     <!-- Para los gráficos de Plotly: Plotly.js -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    
 </head>
 <body>       
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -62,6 +71,15 @@
         </nav>
     
     {% block content %}
+    {% endblock %}
+
+    {% block footer %}
+    <footer class="footer mt-auto py-3 bg-dark text-white">
+        <div class="container text-center">
+            <p>&copy; 2024 FAT</p>
+            <p class="mb-0">Designed with <i class="bi bi-heart-fill text-danger">Django</i> by Rodrigo Merino Tovar</p>
+        </div>
+    </footer>
     {% endblock %}
 
 </body>
