--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -12,7 +12,7 @@
     
     <!-- Para los CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
+    
     <!-- JavaScript Bundle con Popper, para desplegable de Navbar, p. ej. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 
@@ -24,6 +24,8 @@
     <!-- Para los gráficos de Plotly: Plotly.js -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     
+    <!-- Incluyo mis estilos -->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_base.css' %}">
 </head>
 <body>       
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
@@ -56,6 +58,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/dashboard/">DashBoard</a>
+                </li>
                 {% else %}
                 <!-- Sólo lo muestro si el usuario está sin registrar -->
                 <li class="nav-item">
@@ -68,10 +73,12 @@
             </ul>
             </div>
         </div>
-        </nav>
+    </nav>
     
-    {% block content %}
-    {% endblock %}
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
 
     {% block footer %}
     <footer class="footer mt-auto py-3 bg-dark text-white">
