--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -10,9 +10,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>FAT: Financial Analysis Tool</title>
     
-    <!-- Para los CSS -->
+    <!-- BootStrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    
+
     <!-- JavaScript Bundle con Popper, para desplegable de Navbar, p. ej. -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 
@@ -82,10 +82,14 @@
 
     {% block footer %}
     <footer class="footer mt-auto py-3 bg-dark text-white">
-        <div class="container text-center">
-            <p>&copy; 2024 FAT</p>
-            <p class="mb-0">Designed with <i class="bi bi-heart-fill text-danger">Django</i> by Rodrigo Merino Tovar</p>
-        </div>
+    <div class="container text-center">
+        <a href="https://github.com/rmt0009alu/FAT">
+            <img src="{% static 'github.svg' %}" alt="GitHub Logo" width="40" height="40">
+        </a>
+        <br><br>
+        <p class="mb-0">Designed with <i class="bi bi-heart-fill text-danger">Django</i> by Rodrigo Merino Tovar</p>
+        <p>&copy; 2024 FAT</p>
+    </div>
     </footer>
     {% endblock %}
 
