Nueva base datos FTSE100, con adaptación de métodos, tests y plantillas. Nuevo modelo de cambio de monedas y ajuste a euros en plantillas

--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -49,6 +49,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/mapa/dj30">DJ30</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/mapa/ftse100">FTSE100</a>
+                </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/mapa">Mapa stocks</a>
                 </li> -->
