--- a/DashBoard/templates/dashboard.html
+++ b/DashBoard/templates/dashboard.html
@@ -19,6 +19,12 @@
 
 <div class="fila">
     <div class="columna">
+        {% include '_cambio_monedas.html' %}
+    </div>
+</div>
+
+<div class="fila">
+    <div class="columna">
         {% include '_evol_cartera.html' %}
     </div>
 </div>
