--- a/DashBoard/templates/dashboard.html
+++ b/DashBoard/templates/dashboard.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 
+<!-- Mis estilos -->
 <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_dashboard.css' %}">
 
 <div>
