--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -41,16 +41,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link" href="/mapa/ibex35" style="color: white;"><b> [ IBEX35 ] </b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/mapa/ibex35">IBEX35</a>
+                    <a class="nav-link" href="/mapa/dj30" style="color:white;"><b> [ DJ30 ] </b></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/mapa/dj30">DJ30</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/mapa/ftse100">FTSE100</a>
+                    <a class="nav-link" href="/mapa/ftse100" style="color: white;"><b> [ FTSE100 ] </b></a>
                 </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/mapa">Mapa stocks</a>
@@ -62,7 +59,7 @@
                     <a class="nav-link" href="/logout">Logout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/dashboard/">DashBoard</a>
+                    <a class="nav-link" href="/dashboard/">Mi cartera</a>
                 </li>
                 {% else %}
                 <!-- Sólo lo muestro si el usuario está sin registrar -->
