Mejoras en estructura de plantillas HTML

--- a/Analysis/templates/includes/_figura_evolucion_indice_mapa_stocks.html
+++ b/Analysis/templates/includes/_figura_evolucion_indice_mapa_stocks.html
@@ -1,4 +1,7 @@
+<!-- templates/includes/_figura_evolucion_indice_mapa_stocks.html -->
+
 <P class="barra">Evolución último año</P>
+
 <div id="figura">
     <!-- Include your code to display the 'figura' here -->
     {{ figura|safe }}
