--- a/Analysis/templates/includes/_noticias_relacionadas_mapa_stocks.html
+++ b/Analysis/templates/includes/_noticias_relacionadas_mapa_stocks.html
@@ -1,4 +1,7 @@
+<!-- templates/includes/_noticias_relacionadas_mapa_stocks.html -->
+
 <P class="barra">Noticias relacionadas</P>
+
 <div id="externo">
     {% for entry in listaRSS %}
         <div id="rss">
