--- a/Analysis/templates/includes/_tabla_indices_mapa_stocks.html
+++ b/Analysis/templates/includes/_tabla_indices_mapa_stocks.html
@@ -1,3 +1,5 @@
+<!-- templates/includes/_tabla_indices_mapa_stocks.html -->
+
 <table id="tablaStocks" class="table table-sm">
     <thead>
       <tr>
