--- a/DashBoard/templates/dashboard.html
+++ b/DashBoard/templates/dashboard.html
@@ -14,19 +14,19 @@
 
 <div class="fila">
     <div class="columna">
-        {% include '_botones.html' %}
+        {% include 'includes/_botones.html' %}
     </div>
 </div>
 
 <div class="fila">
     <div class="columna">
-        {% include '_cambio_monedas.html' %}
+        {% include 'includes/_cambio_monedas.html' %}
     </div>
 </div>
 
 <div class="fila">
     <div class="columna">
-        {% include '_evol_cartera.html' %}
+        {% include 'includes/_evol_cartera.html' %}
     </div>
 </div>
 
@@ -34,20 +34,20 @@
 {% if comTieneDatos %}
     <div class="fila" style="width: 80%; margin: 0 auto;">
         <div class="columna">
-            {% include '_donut_cartera.html' %}
+            {% include 'includes/_donut_cartera.html' %}
         </div>
         <div class="columna">
-            {% include '_histograma_sectores.html' %}
+            {% include 'includes/_histograma_sectores.html' %}
         </div>
         <div class="columna">
-            {% include '_histograma_monedas.html' %}
+            {% include 'includes/_histograma_monedas.html' %}
         </div>
     </div>
 {% endif %}
 
 <div class="fila">
     <div class="columna">
-        {% include '_en_seguimiento.html' %}
+        {% include 'includes/_en_seguimiento.html' %}
     </div>
 </div>
 
