Gráficas comparativas con sector y otros valores

--- a/Analysis/templates/chart_y_datos.html
+++ b/Analysis/templates/chart_y_datos.html
@@ -29,6 +29,17 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col">
+      {% include 'includes/_evolucion_sector.html' %}
+    </div>
+    <div id="comparador-container" class="col">
+      {% include 'includes/_comparador.html' %}
+    </div>
+  </div>
+
+  <br>
 </div>
+
 
 {% endblock %}
