Actualización de bases de datos. Añadido índice DAX40

--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -49,6 +49,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/mapa/ftse100" style="color: white;"><b> [ FTSE100 ] </b></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/mapa/dax40" style="color: white;"><b> [ DAX40 ] </b></a>
+                </li>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="/mapa">Mapa stocks</a>
                 </li> -->
